--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper scissor</title>
+    <link rel="icon" href="./images/logo2.png" type="image/x-icon">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,6 +21,7 @@
       </div>
     </nav>
     <section class="main">
+      <h1 style="text-align: center;">Rock Paper Scissor Game</h1>
       <div class="choice1">
         <h2>Computer Choice : <span id="computer-choice"></span></h2>
       </div>
