--- a/index.html
+++ b/index.html
@@ -30,15 +30,16 @@
       </div>
       <div class="res">
         <h2>Result : <span id="result"></span></h2>
+        <h3><span id="total"></span></h3>
       </div>
       
     </section>
     <section class="total-score">
       <div class="score1">
-        <h3>Computer Score: <span id="computer-score"></span></h3>
+        <h3>Computer Score: <span id="computer-score">0</span></h3>
       </div>
       <div class="score2">
-        <h3>User Score : <span id="user-score"></span></h3>
+        <h3>User Score : <span id="user-score">0</span></h3>
       </div>
 
     </section>
@@ -55,7 +56,7 @@
 
     </section>
     <div class="reset">
-      <button onclick="reset()"><b>Reset</b></button>
+      <button onclick="reset()"><b>Try again</b></button>
     </div>
     
 
