--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
     <div class="reset">
       <button onclick="reset()"><b>Try again</b></button>
     </div>
-    
 
+    <footer class="footer">
+      <p class="text-center"><b>&copy;2023. Designed by Subramanya K S.</b></p>
+    </footer>
+  
     <script src="./js/app.js" charset="utf-8"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
