--- a/index.html
+++ b/index.html
@@ -20,17 +20,18 @@
         <span class="navbar-brand mb-0 h1">Rock Paper scissor</span>
       </div>
     </nav>
+    
     <section class="main">
       <h1 style="text-align: center">Rock Paper Scissor Game</h1>
       <div class="choice1">
-        <h2>Computer Choice : <span id="computer-choice"></span></h2>
+        <h3>Computer Choice : <span id="computer-choice"></span></h3>
       </div>
       <div class="choice2">
-        <h2>User Choice : <span id="user-choice"></span></h2>
+        <h3>User Choice : <span id="user-choice"></span></h3>
       </div>
       <div class="res">
-        <h2>Result : <span id="result"></span></h2>
-        <h3><span id="total"></span></h3>
+        <h3 class="resd">Result : <span id="result"></span></h3>
+        <h3 class="resf">Final Result :<span id="total"></span></h3>
       </div>
     </section>
     <section class="total-score">
@@ -39,6 +40,12 @@
       </div>
       <div class="score2">
         <h3>User Score : <span id="user-score">0</span></h3>
+      </div>
+    </section>
+    <section class="total-round">
+      <div class="round">
+        <h5>How many Round you want to play?</h5><br>
+        <input class="select-round" type="text" id="round" name="round">
       </div>
     </section>
     <section class="anim">
