--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
     
     <section class="anim">
       <div class="option" id="rock1">
-        <img src="images/rock.png" height="80px" width="80px" />
+        <img class="image" src="images/rock.png" height="80px" width="80px" />
       </div>
       <div class="option" id="paper1">
-        <img src="images/papers.png" height="80px" width="80px" />
+        <img class="image" src="images/papers.png" height="80px" width="80px" />
       </div>
       <div class="option" id="scissor1">
-        <img src="images/scissor.png" height="80px" width="80px" />
+        <img class="image" src="images/scissor.png" height="80px" width="80px" />
       </div>
     </section>
     <div class="reset">
