--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section class="total-round">
       <div class="round">
         <h5>How many Round you want to play?</h5><br>
-        <input class="select-round" type="text" id="round" name="round">
+        <input class="select-round" type="number" id="round" name="round">
       </div>
     </section>
     <section class="result-section">
